# CRYPTO

./: .gitignore  README.md
l1/: .gitignore  COLLISION_VERIFICATION.md  Cargo.toml  README.md
l1/benches/: md5_benchmark.rs
l1/examples/: demo.rs  perf_parallel.rs  perf_test.rs  simple_compute.rs  test_phase2.rs  verify_known_collisions.rs  verify_wang_collision.rs
l1/src/: collision.rs  lib.rs  main.rs
l1/src/gpu/: context.rs  mod.rs  pipeline.rs
l1/src/gpu/shaders/: collision_search.wgsl  md5.wgsl  square.wgsl
l1/src/md5/: mod.rs
l1/tests/: collision_tests.rs  comparison_tests.rs  gpu_compute_tests.rs  md5_tests.rs
l2/: BINARY_ELLIPTIC_CURVES.md  Cargo.toml  DOCUMENTATION.md  ELLIPTIC_CURVES.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_USAGE.md  PROJECT_SUMMARY.md  README.md  TASK2_SUMMARY.md  TASK3_QUICK_REFERENCE.md  TASK3_SUMMARY.md
l2/src/: bigint.rs  binary_elliptic_curve.rs  binary_field.rs  elliptic_curve.rs  extension_field.rs  field.rs  lib.rs  main.rs  polynomial.rs  serialization.rs
l3/: CLAUDE.md  Cargo.toml  DIFFIE_HELLMAN_README.md  GHASH_QUICK_REFERENCE.md  GHASH_README.md  LIBRARY_CONVERSION.md  README.md  SCHNORR_DOCUMENTATION.md  SECURITY.md  openapi-spec.json
l3/examples/: big_integers.rs  diffie_hellman.rs  elliptic_curves.rs  exponentiation.rs  field_basics.rs  field_operations.rs  ghash.rs  schnorr_benchmark.rs  schnorr_signatures.rs  specialized_fields.rs  test_api.rs  timing_attack_test.rs
l3/src/: api.rs  bigint.rs  diffie_hellman.rs  elliptic_curve.rs  field_trait.rs  ghash.rs  lib.rs  main.rs  montgomery.rs  schnorr.rs  (+2 more)
(+17 files in other folders)
