[package]
name = "l1"
version = "0.1.0"
edition = "2024"
authors = ["Maksymilian Neumann"]

[lib]
name = "l1"
path = "src/lib.rs"

[dependencies]
wgpu = "27.0.1"
reference_md5 = { package = "md5", version = "0.8.0" }
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "md5_benchmark"
harness = false
